<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <PreferenceCategory
        android:title="@string/preference_checkbox_title">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/preference_checkbox_name"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_switch_title">

        <SwitchPreference
            android:key="switch_preference"
            android:defaultValue="false"
            android:title="@string/preference_switch_title" />

    </PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>